Feat - gulp가 제대로 설치안됨..

--- a/02_npm_set/package.json
+++ b/02_npm_set/package.json
@@ -13,7 +13,9 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
+    "eslint": "^7.28.0",
     "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0"
+    "gulp-babel": "^8.0.0",
+    "gulp-eslint": "^6.0.0"
   }
 }
